[package]
name = "robot_orientaion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
anyhow = "1.0"
rclrust-msg = { git = "https://github.com/rclrust/rclrust.git" }
rcl-sys = { git = "https://github.com/rclrust/rclrust.git", features = ["foxy"] }
rclrust = { git = "https://github.com/rclrust/rclrust.git", features = ["foxy"]}
tokio = { version = "1", features = ["full"] }
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.36"
nalgebra = "0.29.0" # For quaternion and other mathematical operations
